--- a/root/debian/changelog
+++ b/root/debian/changelog
@@ -1,3 +1,9 @@
+scanserver (4.1.1-3) unstable; urgency=low
+
+  * Initial Jenkins built debian package
+
+ -- Jenkins <jenkins@localhost.localdomain>  Wed, 30 Sep 2015 10:27:58 -0400
+
 scanserver (4.1.1-2) unstable; urgency=low
 
   * Non-maintainer upload.
